<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <include
        android:id="@+id/topBar"
        layout="@layout/include_top_bar_back_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="39dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/looking_for"
            android:textSize="20sp"
            android:textColor="@color/text_yellow"
            android:layout_marginBottom="1dp" />

        <RadioGroup
            android:id="@+id/rgPetType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="32dp">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbDog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dog"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                app:buttonTint="@color/radio_tint" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:textSize="20sp"
                android:textColor="@color/text_white"
                android:layout_marginStart="20dp"
                app:buttonTint="@color/radio_tint" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Search_Radius"
            android:textSize="20sp"
            android:textColor="@color/text_yellow" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tvRadiusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/km"
                android:textColor="@color/text_white" />
        </RelativeLayout>

        <SeekBar
            android:id="@+id/sbRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progress="50"
            android:progressTint="@color/text_yellow"
            android:thumbTint="@color/text_yellow" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
